# PyDicomVerify

./: .gitignore  BigQueryStuff.py  CloudDicomConversion.py  CodeProfiler.py  ConvertByBigQuery.py  DicomStoreStuff.py  DicomWebStuff.py  FixConvertLocally.py  Main.py  PrivateDicFromDavid.py  RecursiveFix.py  StorageBucketStuff.py  TestPydicom.py  Test_DataElementX.py  anatomy_query.py  attrverify_cc.py  awk_builder.py  common_tools.py  condn_cc.py  condn_h.py  conversion.py  data_elementx.py  deprecated_fix_write_excel.py  dicom_fix_issue_info.py  dicom_prechecks.py  down_up_load_performace_measure.py  fix_convert_samples.py  fix_frequent_errors.py  fix_sample.py  get_all_collection_sizes.py  iodcomp_h.py  iodcomp_select_h.py  local_fix_convert.py  local_fix_vfy.py  log_config.json  manage_cloud.py  mesgtext_cc.py  module_cc.py  module_h.py  parallelization.py  (+24 more)
.devcontainer/: Dockerfile  devcontainer.json
common/: __init__.py  code_lint_tools.py  common_tools.py  parallelization.py
docker/: Dockerfile
gcloud/: BigQueryStuff.py  DicomStoreStuff.py  DicomWebStuff.py  StorageBucketStuff.py  __init__.py  dcmstore_tools.py  storage_tools.py  vm_ubuntu_config.sh
rightdicom/: __init__.py
rightdicom/dcmfix/: __init__.py  _sops.py  anatomy.py  config.json  fix_all.py  fix_frequent_errors.py  fix_tools.py  general_patches.py  prior_patches.py  specific_patches.py  (+1 more)
standard/: condn.tpl  elmdict.tpl  module.tpl  module_1.tpl  strval.tpl
support/: condn_1.awk  iodcomp_1.awk  iodcomps_1.awk  mesgtext_1.awk  module_1.awk  sopcl_1.awk
workflows/: main.wdl
(+35 files in other folders)
