[metadata]
# replace with your username:
name = PyDicomVerify-afshinmessiah
version = 1.0.0
author = Afshin Zade
author_email = akbarzadehm@gmail.com
description = A package to fix/verify dicom
url = https://github.com/afshinmessiah/PyDicomVerify
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3